<resources>
    <string name="app_name">Счетчики</string>
    <string name="readings">Показания</string>
    <string name="date">Дата:</string>
    <string name="save_button">Сохранить</string>
    <string name="title_electro">Свет</string>
    <string name="title_water">Вода</string>
    <string name="title_gas">Газ</string>
    <string name="title_activity_settings_electro">Настройки: Свет</string>

    <!-- Preference Titles -->
    <string name="settings_electro">Тариф: Свет</string>
    <string name="settings_water">Тариф: Вода</string>
    <string name="settings_gas">Тариф: Газ</string>
    <string name="settings_tarif">Нажмите для ввода настроек тарифа</string>

    <!-- Messages Preferences -->
    <string name="preferential_rate">Льготный тариф</string>
    <string name="preferential_units_electro">Кол-во льготных кВт-ч</string>
    <string name="preferential_cost_units_electro">Стоимость льготных кВт-ч</string>
    <string name="cost_units_electro">Стоимость 1 кВТ*ч</string>
    <string name="units_kwatt">кВт-ч</string>
    <string name="units_m3">куб.м</string>

    <string name="preferential_units_water">Кол-во льготных куб м</string>
    <string name="preferential_cost_units_water">Стоимость льготных куб м</string>
    <string name="cost_units_water">Стоимость 1 куб м</string>
    <string name="currency">Валюта</string>
    <string name="currency_hint">Укажите название валюты</string>
    <string name="tarif_settings">Настройки тарифов</string>
    <string name="settings">Настройки</string>
    <string name="difference_label">Израсходовано:</string>
    <string name="difference_label_s">Израсходовано: %s %s</string>
    <string name="pay_label">К оплате:</string>
    <string name="pay_label_s">К оплате %s %s</string>


</resources>